--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <script src="https://kit.fontawesome.com/a076d05399.js"></script>
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link rel="stylesheet" href="index.css"> 
     </head>
     <body>
         <!--
@@ -315,6 +316,5 @@
         <div id="loadText">From <br><span>Facebook</span></div>
     </div>
     
-
-
+ <script src='/ind.js'> </script>
 </body></html>
