--- a/index.html
+++ b/index.html
@@ -316,5 +316,5 @@
         <div id="loadText">From <br><span>Facebook</span></div>
     </div>
     
- <script src='/ind.js'> </script>
+ <script src="ind.js"> </script>
 </body></html>
