--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <script src="https://kit.fontawesome.com/a076d05399.js"></script>
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link rel="stylesheet" href="index.css"> 
+            <link rel="shortcut icon" type="image/x-icon" href="https://imgur.com/RVHSYr8.png" />
+
     </head>
     <body>
         <!--
